# orbit-analyzer

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs
.cargo/: config.toml
.github/scripts/: run-local-ci.sh  verify-formatting.sh  verify-workspace.sh
.github/workflow-templates/: benchmark_template.rs
.github/workflows/: ci.yml  orlint-ci.yml  orlint-release.yml  release.yml
docs/: README.md  advanced-usage.md  ci-cd-fixes.md  ci-cd-improvements.md  ci-integration.md  cli-usage.md  configuration.md  custom-lint-rules.md  monorepo-ci-guide.md  performance-guide.md  renderer-specific-analysis.md  sample-config.toml  troubleshooting.md  vscode-integration.md
docs/roadmap/: implementation-phases.md
examples/: .orbit-analyzer.toml  .orlint.toml  BadComponent.orbit  Button.orbit  README.md  RendererSpecific.orbit
scripts/: orbitrs_build.rs  setup-benchmark.sh  setup-environment.sh  windows-setup.bat
src/: config.rs  lib.rs  linter.rs  main.rs  parser.rs  reporter.rs  rules.rs
src/rules/: component_rules.rs  mod.rs
tests/: config_tests.rs  linter_tests.rs
vscode/: .gitignore  README.md  build.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode/src/: extension.ts
vscode/syntaxes/: orbit.tmLanguage.json
