[package]
name = "orbit-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit-analyzer"
readme = "README.md"
description = "Static analysis tool for Orbit UI framework files"

[dependencies]
# Core dependencies
orbit = { version = "0.1.0", git = "https://github.com/orbitrs/orbit.git", branch = "main" }

# Parser libraries
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
log = "0.4"

# CLI support
clap = { version = "4.4", features = ["derive"] }

[lib]
name = "orbit_analyzer"
path = "src/lib.rs"

[[bin]]
name = "orbit-analyzer"
path = "src/main.rs"
