[package]
name = "orlint"
version = "0.1.0"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orlint"
readme = "README.md"
description = "Static analysis tool for Orbit UI framework files"

[dependencies]
# Core dependencies
orbitui = { workspace = true }

# Parser libraries
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde.workspace = true
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror.workspace = true
log = "0.4"

# CLI support
clap = { version = "4.4", features = ["derive"] }

# Regex support
regex = "1.10"

# Parallel processing
rayon = "1.8"

[lib]
name = "orbit_analyzer"
path = "src/lib.rs"

[[bin]]
name = "orlint"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"